# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.
[package]
authors = ["the Deno authors"]
description = "Rust to V8 serialization and deserialization"
edition = "2021"
license = "MIT"
name = "serde_v8"
readme = "README.md"
repository = "https://github.com/denoland/deno"
version = "0.55.0"

[lib]
path = "lib.rs"

[dependencies]
bytes = "1"
derive_more = "0.99.17"
serde = {version = "1.0.136", features = ["derive"]}
smallvec = {version = "1.8", features = ["union"]}
v8 = {version = "0.47.1", default-features = false}

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0.64"

[[example]]
name = "basic"

[[bench]]
harness = false
name = "de"

[[bench]]
harness = false
name = "ser"
