# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
authors = ["the Deno authors"]
description = "Implementation of Console API for Deno"
edition = "2021"
license = "MIT"
name = "deno_console"
readme = "README.md"
repository = "https://github.com/denoland/deno"
version = "0.62.0"

[lib]
path = "lib.rs"

[features]
standalone = ["deno_core/standalone"]

[dependencies]
deno_core = {version = "0.144.0", path = "../../core"}
