# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
authors = ["the Deno authors"]
description = "Fetch API implementation for Deno"
edition = "2021"
license = "MIT"
name = "deno_fetch"
readme = "README.md"
repository = "https://github.com/denoland/deno"
version = "0.85.0"

[lib]
path = "lib.rs"

[features]
standalone = ["deno_core/standalone"]

[dependencies]
bytes = "1.1.0"
data-url = "0.1.1"
deno_core = {version = "0.144.0", path = "../../core"}
deno_tls = {version = "0.49.0", path = "../tls"}
dyn-clone = "1"
http = "0.2.6"
reqwest = {version = "0.11.11", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli"]}
serde = {version = "1.0.136", features = ["derive"]}
tokio = {version = "1.17", features = ["full"]}
tokio-stream = "0.1.8"
tokio-util = {version = "0.7.1", features = ["io"]}
