# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
authors = ["the Deno authors"]
description = "Dynamic library ffi for deno"
edition = "2021"
license = "MIT"
name = "deno_ffi"
readme = "README.md"
repository = "https://github.com/denoland/deno"
version = "0.49.0"

[lib]
path = "lib.rs"

[features]
standalone = ["deno_core/standalone"]

[dependencies]
deno_core = {version = "0.144.0", path = "../../core"}
dlopen = "0.1.8"
libffi = "3.0.0"
serde = {version = "1.0.129", features = ["derive"]}
tokio = {version = "1.17", features = ["full"]}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["errhandlingapi", "minwindef", "ntdef", "winbase", "winnt"]}
