# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
authors = ["the Deno authors"]
description = "Networking for Deno"
edition = "2021"
license = "MIT"
name = "deno_net"
readme = "README.md"
repository = "https://github.com/denoland/deno"
version = "0.54.0"

[lib]
path = "lib.rs"

[features]
standalone = ["deno_core/standalone"]

[dependencies]
deno_core = {version = "0.144.0", path = "../../core"}
deno_tls = {version = "0.49.0", path = "../tls"}
log = "0.4.16"
serde = {version = "1.0.136", features = ["derive"]}
socket2 = "0.4.4"
tokio = {version = "1.17", features = ["full"]}
trust-dns-proto = "=0.21.2"
trust-dns-resolver = {version = "=0.21.2", features = ["tokio-runtime", "serde-config"]}
