# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
authors = ["the Deno authors"]
description = "URL API implementation for Deno"
edition = "2021"
license = "MIT"
name = "deno_url"
readme = "README.md"
repository = "https://github.com/denoland/deno"
version = "0.62.0"

[lib]
path = "lib.rs"

[features]
standalone = ["deno_core/standalone"]

[dependencies]
deno_core = {version = "0.144.0", path = "../../core"}
serde = {version = "1.0.136", features = ["derive"]}
serde_repr = "0.1.7"
urlpattern = "0.2.0"

[dev-dependencies]
deno_bench_util = {version = "0.56.0", path = "../../bench_util"}
deno_webidl = {version = "0.62.0", path = "../webidl"}

[[bench]]
harness = false
name = "url_ops"
