# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
authors = ["the Deno authors"]
description = "WebGPU implementation for Deno"
edition = "2021"
license = "MIT"
name = "deno_webgpu"
readme = "README.md"
repository = "https://github.com/gfx-rs/wgpu"
version = "0.63.0"

[features]
standalone = ["deno_core/standalone"]

[dependencies]
deno_core = {version = "0.144.0", path = "../../core"}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.17", features = ["full"]}
wgpu-core = {version = "0.13", features = ["trace", "replay", "serde"]}
wgpu-types = {version = "0.13", features = ["trace", "replay", "serde"]}
